# BIGD

./: .env.fixed  .gitignore  AI_DOJO_FUTURE_IMPROVEMENTS.md  AUDIT_REPORT_v2.4.md  CHANGELOG.md  DEPLOYMENT_PLAN_PHASE1.md  DOCKER_MODERNIZATION_SUMMARY.md  DOCKER_UPDATE_v4.2.1_COMPLETION_REPORT.md  DOCKER_v4.2.0_README.md  DOCKER_v4.2.1_README.md  Finalny Plan Projektowy_ Osobisty Co-Pilot Sprzeda.md  MODUL_2_NAPRAWKI_IMPLEMENTACJA.md  MODUL_2_PSYCHOMETRIC_TEST.md  Nugget.json  OPIS.md  QUICK_RESPONSE_TEST.md  REFACTORING_ANALYSIS_REPORT.md  REFACTORING_SOLUTION_SUMMARY.md  REFAKTORYZACJA_SYNERGIA_TOTALNA.md  ROLLBACK_PLAN.md  SECURITY_HARDCODED_FIXES.md  SYSTEM_STATUS_SUMMARY.md  ULTRA_BRAIN_v4.0_STATUS.md  ULTRA_BRAIN_v4.1_STATUS.md  ULTRA_BRAIN_v4.2.0_STATUS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker.env  faza2.md  faza3.md  knowledge_base_pl.json  knowledge_base_pl_from_nugget.json  krok1v2.md  package-lock.json  project_checklist.md  projekt_v2.2.md  projekt_v2.4.md  rollback_refactoring.ps1  run_tests.bat  (+11 more)
.cursor/: safe_edit.mdc
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  pyproject.toml.backup  test_analytics.py  test_ollama.py  test_prompt.py
backend/api_examples/: clients.http  feedback.http  interactions.http  sessions.http
backend/app/: __init__.py
backend/migrations/: env.py
backend/scripts/: seed_qdrant.py
backend/tests/: __init__.py  knowledge_base_pl.json  test_ai_service_refactoring.py  test_ai_service_unified.py  test_e2e_workflow.py  test_psychology_analysis_service.py  (+1 more)
(+158 files in other folders)
